# ppt_agent

./: .env.example  .gitignore  DEVLOG.md  Dockerfile  INTERVIEW.md  PRESENTATION.html  PRESENTATION.md  PRESENTATION_ja.html  PRESENTATION_ja.md  PROJECT_OVERVIEW.md  SUMMARY.md  TECH_INTERVIEW_DEEP_DIVE.md  alembic.ini  architecture.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.obsidian/: workspace.json
agent/: brief_doc.py  chart_materialize.py  composer.py  composer_template.py  concept_render.py  critic.py  intake.py  material_binding.py  outline.py  reference.py  slide_plan.py  visual_theme.py
alembic/: env.py
api/: deps.py  exceptions.py  middleware.py  response.py
config/: llm.py  ppt_blueprint.py  settings.py  slide_data_limits.py
db/: base.py  session.py
docs/: 00_index.md  01_project_structure.md  02_database_schema.md  03_pydantic_models.md  04_api_definition.md  05_agent_state_machine.md  06_async_tasks.md  07_prompt_templates.md  08_llm_spec.md  09_tool_spec.md  10_html_templates.md  11_review_rules.md  12_error_codes.md  13_external_apis.md  14_case_library.md  15_testing_strategy.md  16_ppt_generation_pipeline.md  17_development_progress.md  18_frontend.md  19_complete_project_guide.md  20_material_package_integration.md  22_session_handoff_20260405.md  (+12 more)
docs-langgraph/: README.md  _plan.md  architecture.md  configuration.md  data-flow-walkthrough.md  data.md  debugging.md  diagrams.md  extension-guide.md  glossary.md  langgraph.md  llm-and-external-services.md  pipeline.md  project-characteristics.md  templates.md
(+733 files in other folders)
