[tool.poetry]
name = "ppt-agent"
version = "0.1.0"
description = "AI-powered PPT generation agent for architectural presentations"
authors = []
readme = "README.md"
packages = [{include = "ppt_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.0"
langchain = "^0.2.0"
langgraph = "^0.1.0"
langchain-anthropic = "^0.1.0"
anthropic = "^0.28.0"
openai = ">=1.30.0"
playwright = "^1.44.0"
python-pptx = "^0.6.23"
jinja2 = "^3.1.0"
httpx = "^0.27.0"
psycopg2-binary = "^2.9.0"
pgvector = "^0.3.0"
matplotlib = "^3.9.0"
numpy = "^1.26.0"
flower = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
